[package]
name = "fluxbridge"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fluxbridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.13"
webrtc = "0.12"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures = "0.3"
hostname = "0.4"
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
arboard = "3"


